# AICoreService

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/ai/gateway/: __init__.py  base.py  gateway.py
app/ai/guardrails/: __init__.py  input_guard.py  output_guard.py
app/ai/providers/: base.py  factory.py  openrouter_provider.py
app/ai/schemas/: __init__.py  ai.py  structured.py
app/ai/services/: ai_service.py
app/ai/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  registry.py  tool_schema.py
app/api/: routes.py
app/api/v1/: chat.py  health.py  metrics.py
app/core/: dependencies.py  exceptions.py  handlers.py  logging.py  metrics.py  settings.py
tests/: conftest.py  test_calculator.py  test_health.py  test_metrics.py  test_root.py
