[project]
name = "ai-core-service"
version = "1.0.0"
description = "Production-ready AI Core Service with AI gateway abstraction, tool calling, structured outputs, guardrails, and observability."
readme = "README.md"
requires-python = ">=3.11,<3.12"

authors = [
    { name = "Arif Khan" }
]

keywords = [
    "ai",
    "fastapi",
    "backend",
    "llm",
    "openrouter",
    "tool-calling",
    "structured-output",
    "guardrails",
]

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "portkey-ai>=2.3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
